tests/errors/runtime.ConversionFailed.art
print to :boolean "true"
print to :boolean "false"
print to :boolean "boom"